libvoikko/src/voikko_deprecated.h

/**
 * See the notice about thread safety at the top of this file.
 * @param langcode the language code. The following values can be used:
 *        - "", "default" or "fi_FI": Use the default dictionary. The default
 *          dictionary can be assumed to be present in a complete installation of
 *          libvoikko.
 *        - any other string: Use the specified dictionary variant. Usually there
 *          is at least the "standard" variant, but this is not guaranteed. If the
 *          specified dictionary does not exist, an error message is returned.
 *        - NULL: Reserved for future use. Currently leads to undefined behavior.
 * For info on other parameters see documentation for voikkoInit and
 * VOIKKO_SPELLER_CACHE_SIZE.
 */
const char * voikko_init(int * handle, const char * langcode, int cache_size);
/**
 * See the notice about thread safety at the top of this file.
 * See voikkoTerminate
 */
int voikko_terminate(int handle);
/**
 * See voikkoSetBooleanOption
 */
int voikko_set_bool_option(int handle, int option, int value);
/**
 * See voikkoSpellUcs4
 */
int voikko_spell_ucs4(int handle, const wchar_t * word);
/**
 * See voikkoSuggestUcs4
 */
wchar_t ** voikko_suggest_ucs4(int handle, const wchar_t * word);
/**
 * See voikkoFreeCstrArray
 */
void voikko_free_suggest_cstr(char ** suggest_result);
/**
 * See voikkoNextTokenUcs4
 */
enum voikko_token_type voikko_next_token_ucs4(int handle, const wchar_t * text,
                       size_t textlen, size_t * tokenlen);
/**
 * See voikkoNextGrammarErrorUcs4
 */
voikko_grammar_error voikko_next_grammar_error_ucs4(int handle, const wchar_t * text,
                     size_t textlen, size_t startpos, int skiperrors);
/**
 * See voikkoAnalyzeWordUcs4
 */
struct voikko_mor_analysis ** voikko_analyze_word_ucs4(
                              int handle, const wchar_t * word);